<resources>
    <string name="app_name">简约</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="position_unknown">Position Unknown</string>
    <string name="invite">invite</string>
    <string name="add_friends">添加新朋友</string>
    <string name="register">注册</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="new_friends">新朋友</string>
    <string name="settings">Setting</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="sign_in">登录</string>
    <string name="create_new_account">还没有账号？注册一个</string>
    <string name="loading">加载中</string>
    <string name="sign_up">注册</string>
    <string name="account_register">注册账号</string>
    <string name="register_success">注册成功</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="map">地图</string>
    <string name="friends">好友</string>
    <string name="profile">个人</string>
    <string name="title_activity_theme_change">ThemeChangeActivity</string>
    <string name="theme">主题选择</string>
    <string name="send">发送</string>
    <string name="nick_name">昵称</string>
    <string name="string_default">Null</string>
    <string name="nick_name_default">一个昵称</string>
    <string name="without_data">没有数据</string>
</resources>
